jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.fernandojrlinux.net
    secretName: jenkins-tls
  rules:
    - host: jenkins.fernandojrlinux.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: jenkins
                port:
                  number: 80
